- fixed vertical spacing on mobile - added demos page

--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -3,6 +3,8 @@
   flex-direction: row;
   flex-wrap: nowrap;
   z-index: 0;
+  height: 100vh;
+  width: 100vw;
 }
 
 .content_container {
